configuração docker + integração backend + correção erros backend