@@ -14,22 +14,22 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.List;
+import java.util.Collections;
 import java.util.Optional;
-
-//Esta classe é um filtro que pega todas as requisições HTTP antes de chgar aos controllers.
 
 @Component
 public class JwtAuthFilter extends OncePerRequestFilter {
 
     @Autowired
-    private JwtService jwtService; // Serviço responsável por manipular o token JWT
+    private JwtService jwtService;
 
     @Autowired
-    private UserRepository userRepo; // Repositório para buscar o usuário no banco
+    private UserRepository userRepo;
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
+    protected void doFilterInternal(HttpServletRequest request,
+                                    HttpServletResponse response,
+                                    FilterChain filterChain)
             throws ServletException, IOException {
 
         String authHeader = request.getHeader("Authorization");
@@ -39,32 +39,20 @@ public class JwtAuthFilter extends OncePerRequestFilter {
             return;
         }
 
-        // Remove o prefixo "Bearer " para obter o token JWT
         String token = authHeader.substring(7);
-
-        // Extrai o e-mail do usuário a partir do token
         String email = jwtService.extractEmail(token);
 
-        // Verifica se o e-mail foi extraído e se ainda não há autenticação no contexto
         if (email != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-
-            // Busca o usuário no banco pelo e-mail
             Optional<User> userOptional = userRepo.findByEmail(email);
 
-            // Verifica se o usuário existe e se o token é válido
             if (userOptional.isPresent() && jwtService.isTokenValid(token, userOptional.get())) {
-
                 User user = userOptional.get();
-
-                // Extrai a role do token JWT
                 String role = jwtService.extractClaim(token, claims -> claims.get("role", String.class));
 
-                // Cria o objeto de autenticação com a role do usuário
                 UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
-                        user, null, List.of(new SimpleGrantedAuthority(role))
+                        user, null, Collections.singletonList(new SimpleGrantedAuthority(role))
                 );
 
-                // Define a autenticação no contexto de segurança do Spring
                 SecurityContextHolder.getContext().setAuthentication(authToken);
             }
         }
